--- a/client/src/index.css
+++ b/client/src/index.css
@@ -69,4 +69,25 @@
   #root {
     @apply h-full w-full;
   }
+
+  /* width */
+  ::-webkit-scrollbar {
+    width: 0.5rem;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    @apply bg-slate-200;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    @apply rounded-md;
+    @apply bg-slate-400;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    @apply bg-slate-500;
+  }
 }
