--- a/client/src/index.css
+++ b/client/src/index.css
@@ -91,3 +91,20 @@
     @apply bg-slate-500;
   }
 }
+
+@layer utilities {
+  @keyframes enter {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  .animate-enter {
+    animation: enter 0.5s ease-out forwards;
+  }
+}
